# boot-mode-ui

./: COPYING  Makefile.am  Makefile.inc  autogen.sh  bm.h  boot-mode-ui.desktop.in  boot-mode-ui.glade  boot-mode-ui.gladep  boot-mode-ui.spec.in  boot-mode.gladep  callbacks.c  callbacks.h  configure.in  interface.c  main.c
po/: de.po  es.po  fr.po  it.po  ja.po  ko.po  nl.po  zh_CN.po  zh_TW.po
